--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         </div>
         <nav class="social-links">
             <a href="mailto:dantelentinics@gmail.com">Email</a>
-            <a href="https://linkedin.com/in/lentinidante" target="_blank">LinkedIn</a>
-            <a href="https://x.com/lentinidante" target="_blank">X</a>
+            <a href="https://linkedin.com/in/dantelentini" target="_blank">LinkedIn</a>
+            <a href="https://x.com/dantelentini" target="_blank">X</a>
             <a href="momsaidhavefun.pdf" target="_blank"><3</a>
             <a href="#" id="dark-mode-toggle">dark-mode.exe</a>
         </nav>
@@ -518,4 +518,5 @@
     </script>
 </body>
 </html>
+
 
